--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,10 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <img src="https://www.dropbox.com/s/zhf3trxcvulsumb/256941.png?dl=1" />
+    <div class='title'>TrackEye proof of concept test</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of eyes and the model should be able to figure in which direction is looking
     </p>
     <div class='content'>
       <div class='no-display'>
