--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,9 +9,12 @@
   <div class='center'>
     <img src="https://www.dropbox.com/s/zhf3trxcvulsumb/256941.png?dl=1" />
     <div class='title'>TrackEye proof of concept test</div>
-    <p>
-      Use images of eyes and the model should be able to figure in which direction is looking
-    </p>
+    <p>Use images of eyes and the model should be able to figure out in which direction your eye is looking</p>
+    <p>for better results, please upload a photo similar to the example below</p>
+    <img src="https://www.dropbox.com/s/bsxzd2ema8par06/up_2.jpg?dl=1" />
+    <br></br>     
+    <p>Disclaimer: This website is in no way related to NEC Lenovo Japan, the use of organization logos are for educational purposes only </p>
+    <p><b>For NEC lenovo Japan Global Future Leaders Program interview use only<b> </p>
     <div class='content'>
       <div class='no-display'>
         <input id='file-input'
