--- a/app/view/index.html
+++ b/app/view/index.html
@@ -38,7 +38,7 @@
     </div>
   </div>
   <p>Disclaimer: This website is in no way related to NEC Lenovo Japan, the use of organization logos are for educational purposes only </p>
-<p><b>For NEC lenovo Japan Global Future Leaders Program interview use only<b> </p>
+<p><b>For NEC Lenovo Japan Global Future Leaders Program interview use only<b> </p>
 </div>
 </body>
 </html>
